moved to Guice, decoupled to services